# Analyzer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/utkin/analyzerapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CLogReader.cpp  CLogReader.h  CMakeLists.txt  Logger.h  Regexp.cpp  Regexp.h  native-lib.cpp
app/src/main/cpp/tests/: unittests.cpp
app/src/main/java/com/utkin/analyzerapp/: AnalizerListActivity.kt  AnalyzerApp.kt  AnalyzerAsyncTask.kt  AnalyzerListAdapter.kt  AnalyzerListFragment.kt  AnalyzerListItem.kt  Constants.kt  ResultLogWriter.kt
app/src/main/res/drawable/: custom_button.xml  custom_button_clicked.xml  custom_button_selector.xml  list_selector.xml  list_selector_pressed.xml
app/src/main/res/layout/: analyzer_list.xml  listitem.xml  listview.xml
app/src/test/java/com/utkin/analyzerapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
